@@ -1,7 +1,8 @@
 v1.0.1 - Pending
-	+ Allow editing stream name/url
+	+ Make lyrics fetching optional
+	+ Allow editing of stream name/url
 	+ Small usability improvements to gtk.StatusIcon
-	+ Bug: Info window freezes when editing currently playing song
+	+ Bug: Info window freezes when editing currently playing song's tags
 
 v1.0 - January 21, 2006
 	+ Multiple views for library: filesystem, artists, albums
